[package]
author = "daladim"
name = "libpdraw-sys"
version = "7.5.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "Rust wrappers over Parrot's libpdraw library"
homepage = "https://github.com/daladim/libpdraw-sys"
repository = "https://github.com/daladim/libpdraw-sys"
documentation = "https://docs.rs/libpdraw-sys"
keywords = ["Parrot", "pdraw", "Anafi", "drone"]
categories = ["api-bindings", "multimedia", "aerospace::drones"]

[build-dependencies]
bindgen = "0.69"

[dependencies]
